--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
     <script>
         //firebase初期化
         const firebaseConfig = {
-            apiKey: "AIzaSyDtDj9LnJFA7Vct4JbAbqidNg1BsSq8YNY",
-            authDomain: "noteapp-1229.firebaseapp.com",
-            projectId: "noteapp-1229",
-            storageBucket: "noteapp-1229.appspot.com",
-            messagingSenderId: "330140971770",
-            appId: "1:330140971770:web:3760d22c8f5ff8c23d8f43",
-            measurementId: "G-5WMTW9TM22"
+            apiKey: "...",
+            authDomain: "...",
+            projectId: "...",
+            storageBucket: "...",
+            messagingSenderId: "...",
+            appId: "...",
+            measurementId: "..."
         };
         firebase.initializeApp(firebaseConfig);
 
